--- a/MemoryGame/app/src/main/res/values/strings.xml
+++ b/MemoryGame/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="memoryGame">Memory Game</string>
+    <string name="playGame">Play</string>
+    <string name="rules">Rules</string>
+    <string name="scores">Scores</string>
+    <string name="quitGame">Quit</string>
 </resources>
