--- a/MemoryGame/app/src/main/res/values/strings.xml
+++ b/MemoryGame/app/src/main/res/values/strings.xml
@@ -41,4 +41,22 @@
     <string name="expert">Expert</string>
     <string name="previousButton">Previous Player/Back</string>
     <string name="nextButton">Next Player/Start Game</string>
+    <string name="rulesTitle">Rules</string>
+    <string name="pairOf2Rules"> Pairs Of 2: A player must find pairs of identical cards in a grid of 28 cards.
+    If he finds a pair, he gets a point and gets to play again.\n However if he doesn't find one, it's the opponent's turn.
+    This gamemode supports up to 4 players which could be AI or human entities.</string>
+    <string name="pairOf3Rules">Pairs Of 3: The rules are basically the same as the rules from the "Pairs of 2 Mode", but with the exception that the player has to find three identical cards in a grid of 28 cards. </string>
+    <string name="BattleRules">Battle: Two players battle against each other in a game of Pairs of 2. Each player has a grid of 24 cards, and has to find identical pairs. </string>
+    <string name="selectMode">Select Mode: </string>
+    <string name="pOf2">Pairs Of 2</string>
+    <string name="pOf3">Pairs of 3</string>
+    <string name="battle1v1">Battle</string>
+    <string name="selectPlayers">Players: </string>
+    <string name="playerOptions">Next</string>
+    <string name="twoPlayers">2 Players</string>
+    <string name="threePlayers">3 Players</string>
+    <string name="fourPlayers">4 Players</string>
+
+
+
 </resources>
