--- a/MemoryGame/app/src/main/res/values/strings.xml
+++ b/MemoryGame/app/src/main/res/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="twoPlayers">2 Players</string>
     <string name="threePlayers">3 Players</string>
     <string name="fourPlayers">4 Players</string>
+    <string name="mainMenu">Back</string>
 
 
 
