--- a/MemoryGame/app/src/main/res/values/strings.xml
+++ b/MemoryGame/app/src/main/res/values/strings.xml
@@ -29,6 +29,9 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+    <string name="playeroptions">Player Options</string>
+    <string name="player2options">Player 2: </string>
+    <string name="player1options">Player 1: </string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
